fix styling on mobile

--- a/styles/Profile.module.css
+++ b/styles/Profile.module.css
@@ -28,11 +28,14 @@
   font-size: 0.8em;
   
 }
-
+.imagesContainer{
+  margin-bottom:'5%'
+}
 .bannerImage{
   width:100%;
   height:auto;
 }
+
 
 .imagesContainer{
   max-height:"50%";
